--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+# Predeterminadas
 agp = "8.13.1"
 kotlin = "2.0.21"
 coreKtx = "1.10.1"
@@ -9,7 +10,25 @@ lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.09.00"
 
+# Extras
+
+# Navegación
+navigationCompose = "2.7.7"
+# DataStore
+datastore = "1.1.1"
+# Coroutines
+coroutines = "1.8.0"
+# Gson
+gson = "2.10.1"
+# Security
+security = "1.1.0"
+# BCrypt
+bcrypt = "0.10.2"
+# Coil
+coil = "2.6.0"
+
 [libraries]
+# Predeterminadas
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -24,6 +43,23 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+# Extras
+
+# Navigation
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+# DataStore
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+# Coroutines
+kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+# Gson
+google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+# Security
+androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "security" }
+# BCrypt
+favre-bcrypt = { group = "at.favre.lib", name = "bcrypt", version.ref = "bcrypt" }
+# Coil
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
