--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ security = "1.1.0"
 bcrypt = "0.10.2"
 # Coil
 coil = "2.6.0"
+uiGraphics = "1.9.4"
 
 [libraries]
 # Predeterminadas
@@ -60,6 +61,7 @@ androidx-security = { group = "androidx.security", name = "security-crypto", ver
 favre-bcrypt = { group = "at.favre.lib", name = "bcrypt", version.ref = "bcrypt" }
 # Coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
