primera version pantallas login

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ bcrypt = "0.10.2"
 # Coil
 coil = "2.6.0"
 uiGraphics = "1.9.4"
+animationCoreLint = "1.9.4"
 
 [libraries]
 # Predeterminadas
@@ -62,6 +63,7 @@ favre-bcrypt = { group = "at.favre.lib", name = "bcrypt", version.ref = "bcrypt"
 # Coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
+androidx-compose-animation-core-lint = { group = "androidx.compose.animation", name = "animation-core-lint", version.ref = "animationCoreLint" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
